--- a/CSS/PrimeStyle.css
+++ b/CSS/PrimeStyle.css
@@ -1,113 +1,105 @@
-@font-face {
-  font-family: Bodoni;
-  src: url(fonnts.com-LTC-Bodoni-Pro-.otf);
-}
-body{
+body {
   background-color: #1ba6b0;
-  color: rgb(255, 255, 255);
-  font-size: 18px;
+  color: #000;
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
 }
-p,h2,h3,h4,ol,img{
-  position: relative;
-  left: 2.5%;
-  font-family: Bodoni;
-}
-.contact_form{
-  position: relative;
-  left: 2.5%;
-}
-  h1{
-    color:rgb(255, 255, 255);
-    text-align: center;
-    font-family: Bodoni;
-  }
-  a:link{
-    color:rgb(255, 255, 255);
-    text-decoration: none;
-    position: relative;
-    left: 2.5%;
-  }
-  a:visited{
-    color:rgb(255, 255, 255);
-    text-decoration: none;
-    position: relative;
-    left: 2.5%;
-  }
-  
-  a:hover{
-    color:rgb(207, 42, 81);
-    text-decoration: underline;
-    position: relative;
-    left: 2.5%;
-  }
-  
-  .topnav {
-    text-align: center;
-    overflow: hidden;
-  }
-  .topnav a {
-    color: rgb(255, 255, 255);
-    text-align: center;
-    padding: 18px 20px;
-    text-decoration: none;
-    font-size: 25px;
-    position: relative;
-    left: 0%;
-  }
-  .topnav a:hover {
-    color:rgb(207, 42, 81);
-  }
-  .topnav a.active {
-    color: white;
-  }
-  
- @media only screen and (min-width: 480px) and (max-width: 750px) {
 
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+p{
+  font-size: 17px;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+h1 {
+  text-align: center;
+}
+
+.topnav {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.topnav a {
+  color: #000;
+  text-decoration: none;
+  padding: 10px 15px;
+  font-size: 25px;
+  transition: color 0.3s ease, text-decoration 0.3s ease; 
+}
+
+.topnav a:hover {
+  color: #cf2a51;
+  text-decoration: none;
+}
+
+a {
+  color: #000000;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+hr {
+  margin: 20px 0;
+  border: none;
+  border-top: 2.5px solid #000000;
+  
+}
+
+.contact_form {
+  margin-top: 20px;
+}
+
+.contact_form input,
+.contact_form textarea {
+  width: 100%;
+  padding: 8px;
+  margin-top: 4px;
+  margin-bottom: 10px;
+  border: 1px solid #000;
+}
+
+.contact_form textarea {
+  height: 100px;
+}
+section {
+  background-color: rgb(174, 230, 227);
+  border: 4px solid #000;
+  border-radius: 10px; 
+  padding: 7.5px;
+}
 img{
-  width:200px;
-  height:200px
+  width:450px;
+  height:450px;
+  margin: 10px;
+  border: 2px solid #ccc;
 }
-body{
- background-color: #1ba6b0;
- color: rgb(255, 255, 255);
- font-family: Georgia, Times, 'Times New Roman', serif;
- font-size: 18px;
- left: 10%;
+.contact_form button {
+  padding: 10px 20px;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  cursor: pointer;
 }
- h1{
-   color:rgb(255, 255, 255);
-   text-align: center;
-   left: 10%;
- }
- a:link{
-   color:rgb(255, 255, 255);
-   text-decoration: none;
- }
- a:visited{
-   color:rgb(255, 255, 255);
-   text-decoration: none;
- }
- 
- a:hover{
-   color:rgb(207, 42, 81);
-   text-decoration: underline;
- }
- 
- .topnav {
-   text-align: center;
-   overflow: hidden;
- }
- .topnav a {
-   color: rgb(255, 255, 255);
-   text-align: center;
-   padding: 18px 20px;
-   text-decoration: none;
-   font-size: 25px;
- }
- .topnav a:hover {
-   color:rgb(207, 42, 81);
- }
- .topnav a.active {
-   color: white;
- }
+
+.contact_form button:hover {
+  background-color: #cf2a51;
+}
+
+.social_links {
+  margin-top: 30px;
+}
+
+.social_links ul {
+  list-style-type: disc;
+  padding-left: 20px;
 }
